fix: Navbar spacing

--- a/frappe/public/scss/desk/breadcrumb.scss
+++ b/frappe/public/scss/desk/breadcrumb.scss
@@ -5,6 +5,7 @@
 }
 
 #navbar-breadcrumbs {
+	margin-left: var(--margin-md);
 	font-size: var(--text-sm);
 	a {
 		font-size: var(--text-md);
